syntax = "proto3";

package browser_pool;

// Browser Pool Service Definition
service BrowserPool {
  // Session Management
  rpc Acquire(SessionSpec) returns (SessionHandle);
  rpc Release(SessionHandle) returns (ReleaseAck);
  rpc GetSession(SessionHandle) returns (SessionInfo);
  
  // Page Operations
  rpc CreatePage(CreatePageRequest) returns (PageHandle);
  rpc NavigatePage(NavigateRequest) returns (NavigateResponse);
  rpc ExecuteScript(ScriptRequest) returns (ScriptResponse);
  rpc ClosePage(PageHandle) returns (OperationAck);
  
  // Browser Actions
  rpc Click(ClickRequest) returns (OperationAck);
  rpc Type(TypeRequest) returns (OperationAck);
  rpc Screenshot(ScreenshotRequest) returns (ScreenshotResponse);
  rpc GetContent(GetContentRequest) returns (GetContentResponse);
  
  // Pool Management
  rpc GetStats(Empty) returns (PoolStats);
  rpc HealthCheck(Empty) returns (HealthStatus);
}

// Messages
message SessionSpec {
  string user_id = 1;
  BrowserOptions options = 2;
  map<string, string> metadata = 3;
}

message BrowserOptions {
  bool headless = 1;
  ViewportSize viewport = 2;
  string user_agent = 3;
  repeated string args = 4;
}

message ViewportSize {
  int32 width = 1;
  int32 height = 2;
}

message SessionHandle {
  string session_id = 1;
}

message SessionInfo {
  string session_id = 1;
  string created_at = 2;
  string last_activity = 3;
  repeated string page_ids = 4;
  map<string, string> metadata = 5;
}

message ReleaseAck {
  bool success = 1;
  string message = 2;
}

message CreatePageRequest {
  string session_id = 1;
  string url = 2;
  int32 timeout_ms = 3;
}

message PageHandle {
  string session_id = 1;
  string page_id = 2;
}

message NavigateRequest {
  string session_id = 1;
  string page_id = 2;
  string url = 3;
  int32 timeout_ms = 4;
}

message NavigateResponse {
  bool success = 1;
  string final_url = 2;
  string title = 3;
  string error = 4;
}

message ScriptRequest {
  string session_id = 1;
  string page_id = 2;
  string script = 3;
  repeated string args = 4;
}

message ScriptResponse {
  bool success = 1;
  string result = 2;
  string error = 3;
}

message ClickRequest {
  string session_id = 1;
  string page_id = 2;
  string selector = 3;
  int32 timeout_ms = 4;
}

message TypeRequest {
  string session_id = 1;
  string page_id = 2;
  string selector = 3;
  string text = 4;
  int32 timeout_ms = 5;
}

message ScreenshotRequest {
  string session_id = 1;
  string page_id = 2;
  bool full_page = 3;
  string format = 4; // png, jpeg
}

message ScreenshotResponse {
  bool success = 1;
  bytes image_data = 2;
  string error = 3;
}

message GetContentRequest {
  string session_id = 1;
  string page_id = 2;
  string content_type = 3; // html, text, pdf
}

message GetContentResponse {
  bool success = 1;
  string content = 2;
  string error = 3;
}

message OperationAck {
  bool success = 1;
  string message = 2;
}

message Empty {}

message PoolStats {
  int32 total_browsers = 1;
  int32 active_sessions = 2;
  int32 available_slots = 3;
  repeated SessionStat session_stats = 4;
}

message SessionStat {
  string session_id = 1;
  string created_at = 2;
  string last_activity = 3;
  int32 page_count = 4;
  map<string, string> metadata = 5;
}

message HealthStatus {
  bool ready = 1;
  string status = 2;
  int32 uptime_seconds = 3;
}